[package]
name = "esp32-wifi"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-net = { version = "0.6.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c6", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
    "esp-alloc",
    "esp32c6",
    "log",
    "utils",
    "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c6"] }
static_cell = { version = "2.1.0", features = ["nightly"] }


# esp-backtrace = { version = "0.14.2", features = [
#     "esp32c6",
#     "exception-handler",
#     "panic-handler",
#     "println",
# ] }

# esp-hal = { version = "0.22.0", features = ["esp32c6"] }
# esp-println = { version = "0.12.0", features = ["esp32c6", "log"] }
# log = { version = "0.4.21" }
# esp-alloc = { version = "0.5.0" }
# embedded-io = "0.6.1"
# embedded-io-async = "0.6.1"
# embassy-net = { version = "0.4.0", features = [
#     "tcp",
#     "udp",
#     "dhcpv4",
#     "medium-ethernet",
# ] }
# esp-wifi = { version = "0.11.0", default-features = false, features = [
#     "esp32c6",
#     "utils",
#     "wifi",
#     "esp-alloc",
#     "log",
# ] }
# heapless = { version = "0.8.0", default-features = false }
# smoltcp = { version = "0.11.0", default-features = false, features = [
#     "medium-ethernet",
#     "proto-dhcpv4",
#     "proto-igmp",
#     "proto-ipv4",
#     "socket-dhcpv4",
#     "socket-icmp",
#     "socket-raw",
#     "socket-tcp",
#     "socket-udp",
# ] }
# embassy-executor = { version = "0.6.0", features = ["task-arena-size-20480"] }
# embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
# esp-hal-embassy = { version = "0.5.0", features = ["esp32c6"] }
# static_cell = { version = "2.1.0", features = ["nightly"] }
# critical-section = "1.2.0"

[profile.dev]
# UNTESTED debug had a failed assertion before, maybe it was real
# release level optimization optimizes out interesting variables
codegen-units = 1       # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
# Documentation says at least opt-level 2 but maybe extra options will make up for it
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
